crates/auto-lang/test/cookbook/errors/001_boxed_error/boxed_error.at
use.rust std::error::Error

fn main() ! {
    let result = Ok("hello")
    let val = result.?
    print(val)
}
